feat: add first research experience
